samples/_failures_safe/1761639790_8b26a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6b801ef4.c: In function ‘main’:
./samples/SAFE/__tmp_6b801ef4.c:157:17: error: expected expression at end of input
  157 |                 if (status ==
      |                 ^~
./samples/SAFE/__tmp_6b801ef4.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6b801ef4.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6b801ef4.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6b801ef4.c:157:17: error: expected declaration or statement at end of input
